--- a/templates/extract.html
+++ b/templates/extract.html
@@ -33,6 +33,8 @@
 
 <p><a href="/">Zpět na vyhledání</a></p>
 
+<p>Sidlo2: {{ row.sidlo_v2[0] }}</p>
+
 <table class= "table" style="width: 100%">
     <!-- Display registration date -->
     <tr>
