add database function

--- a/templates/results2.html
+++ b/templates/results2.html
@@ -54,7 +54,7 @@
     <tr>
         <td>Sídlo:</td>
         <!-- <td>{{ sidlo|join("") }}</td> -->
-        <td>{{ row.sidlo }} {{ row.sidlo_v2 }} </td>
+        <td>{{ row.sidlo }} </td>
         <td><a href="/{{ row.ico }}">Úplný výpis</a></td>
         <td><a href="/{{ row.ico }}-actual">Aktuální výpis</a></td>
     </tr>
